# wuziqi-server

./: README.md
wuziqi2/: CMakeLists.txt  docker-compose.yml  nginx.conf
wuziqi2/auth-service/: CMakeLists.txt
wuziqi2/auth-service/include/: handler.h
wuziqi2/auth-service/src/: handler.cpp  main.cpp
wuziqi2/common/: CMakeLists.txt
wuziqi2/common/include/: http_client.h  logger.h  mysql_pool.h  redis_pool.h  thread_pool.h  utils.h
wuziqi2/common/src/: http_client.cpp  logger.cpp  mysql_pool.cpp  redis_pool.cpp  thread_pool.cpp  utils.cpp
wuziqi2/game-service/: CMakeLists.txt
wuziqi2/game-service/include/: connection_mgr.h  handler.h
wuziqi2/game-service/src/: connection_mgr.cpp  handler.cpp  main.cpp
wuziqi2/match-service/: CMakeLists.txt
wuziqi2/match-service/include/: handler.h
wuziqi2/match-service/src/: handler.cpp  main.cpp
wuziqi2/scripts/: start.sh
wuziqi2/tests/: CMakeLists.txt  integration_test.cpp  integration_test1.cpp  test_auth.cpp  test_match.cpp
