/**
 * @file CMakeLists.txt
 * @brief 匹配服务构建配置
 * 
 * =====================================================
 * 匹配服务 (match-service)
 * =====================================================
 * 
 * 匹配服务负责将等待中的玩家配对：
 * 
 *   ┌─────────────────────────────────────────────────────────┐
 *   │                    匹配服务                             │
 *   ├─────────────────────────────────────────────────────────┤
 *   │                                                         │
 * │   玩家 A ──申请匹配──►┐                                  │
 * │   等级: 1500          │    ┌───────────────┐             │
 * │                       ├───►│               │             │
 * │   玩家 B ──申请匹配──►┤    │   匹配算法     │             │
 * │   等级: 1600          │    │  (分桶匹配)    │             │
 * │                       ├───►│               │             │
 * │   玩家 C ──申请匹配──►┤    └───────┬───────┘             │
 * │   等级: 1800          │            │                     │
 * │                       │            ▼                     │
 * │   玩家 D ──申请匹配──►┘    创建游戏房间                   │
 * │   等级: 1550                   │                         │
 * │                                ▼                         │
 * │                          通知两个玩家                     │
 * │                          开始游戏                        │
 * └─────────────────────────────────────────────────────────┘
 * 
 * =====================================================
 * CMake 子目录结构
 * =====================================================
 * 
 * 每个服务都有自己的 CMakeLists.txt：
 * 
 * ├── CMakeLists.txt          # 根配置
 * └── match-service/
 *     ├── CMakeLists.txt      # 子配置
 *     ├── include/
 *     │   └── handler.h
 *     └── src/
 *         ├── main.cpp
 *         └── handler.cpp
 */

# =============================================================================
// 1. 项目定义
// =============================================================================

/**
 * 定义项目名称
 * 
 * VERSION 1.0.0: 版本号
 * LANGUAGES CXX: C++ 语言
 */
cmake_minimum_required(VERSION 3.10)
project(match-service VERSION 1.0.0 LANGUAGES CXX)

// =============================================================================
// 2. C++ 标准
// =============================================================================

/**
 * 设置 C++ 标准
 */
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

// =============================================================================
// 3. 源文件
// =============================================================================

/**
 * 定义源文件列表
 * 
 * src/main.cpp:   程序入口
 * src/handler.cpp: 业务逻辑处理
 */
set(SOURCES
    src/main.cpp
    src/handler.cpp
)

/**
 * 定义头文件列表
 * 
 * include/handler.h: 业务处理接口声明
 */
set(HEADERS
    include/handler.h
)

// =============================================================================
// 4. 创建可执行文件
// =============================================================================

/**
 * 创建可执行文件
 * 
 * match-service: 可执行文件名
 * ${SOURCES} ${HEADERS}: 编译所需的源文件和头文件
 */
add_executable(match-service ${SOURCES} ${HEADERS})

// =============================================================================
// 5. 头文件路径
// =============================================================================

/**
 * 设置头文件包含路径
 * 
 * target_include_directories 为目标设置 include 目录
 * PRIVATE 表示只在当前目标内生效
 */
target_include_directories(match-service PRIVATE
    # 当前服务的头文件目录
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    
    # 公共模块的头文件目录
    ${CMAKE_SOURCE_DIR}/common/include
)

// =============================================================================
// 6. 链接库
// =============================================================================

/**
 * 链接公共库
 * 
 * common: 静态库 libcommon.a
 * PRIVATE 表示只在当前目标内生效
 */
target_link_libraries(match-service PRIVATE common)

// =============================================================================
// 7. 编译选项
// =============================================================================

/**
 * 如果使用 GCC 或 Clang 编译器
 */
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    # 添加警告选项
    # -Wall: 开启所有警告
    # -Wextra: 开启额外警告
    target_compile_options(match-service PRIVATE -Wall -Wextra)
endif()

// =============================================================================
// 8. 安装
// =============================================================================

/**
 * 安装目标
 * 
 * 将 match-service 可执行文件安装到 bin/ 目录
 * 
 * DESTINATION bin: 相对路径，相对于 CMAKE_INSTALL_PREFIX
 * 默认 CMAKE_INSTALL_PREFIX 是 /usr/local/
 * 所以实际安装路径是 /usr/local/bin/match-service
 */
install(TARGETS match-service DESTINATION bin)
